--- a/QuranX.Web/Views/DictionaryEntry/DictionaryEntry.cshtml
+++ b/QuranX.Web/Views/DictionaryEntry/DictionaryEntry.cshtml
@@ -5,7 +5,7 @@
 <h1>Arabic dictionary</h1>
 <h2>Dictionary @Model.Dictionary.Name</h2>
 <h3>Word <span class="arabic">@Model.Entries.First().Word</span></h3>
-<div class="dictionary__details">
+<div class="dictionary__details dictionary__details--@Model.Dictionary.Code">
 	@foreach (var entry in Model.Entries)
 	{
 			foreach (string html in entry.Html)
