--- a/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
+++ b/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
@@ -10,7 +10,7 @@
 @Html.Partial("HadithIndexHeader", Model.HadithIndexHeaderViewModel)
 @if (@Model.Hadiths.Count() != 1)
 {
-	<h4>@Model.Hadiths.Count() @hadithsTitle</h4>
+	<h4 class="hadith__reference-count">@Model.Hadiths.Count() @hadithsTitle</h4>
 }
 @foreach (HadithViewModel hadithVM in Model.Hadiths)
 {
