--- a/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
+++ b/QuranX.Web/Views/HadithIndex/Hadiths.cshtml
@@ -3,16 +3,21 @@
 @model HadithsViewModel
 
 @{
-	string hadithsTitle = Model.Hadiths.Count == 1 ? "hadith" : "hadiths";
-	ViewBag.Title = $"{Model.HadithIndexHeaderViewModel.Collection.Name} Hadiths";
+    string hadithsTitle = Model.Hadiths.Count == 1 ? "hadith" : "hadiths";
+    ViewBag.Title = $"{Model.HadithIndexHeaderViewModel.Collection.Name} Hadiths";
 }
 
-@Html.Partial("HadithIndexHeader", Model.HadithIndexHeaderViewModel)
-@if (@Model.Hadiths.Count() != 1)
-{
-	<h4>@Model.Hadiths.Count() @hadithsTitle</h4>
+@{
+    Html.RenderPartial("HadithIndexHeader", Model.HadithIndexHeaderViewModel);
+    if (@Model.Hadiths.Count() != 1)
+    {
+        <h4>@Model.Hadiths.Count() @hadithsTitle</h4>
+    }
 }
-@foreach (HadithViewModel hadithVM in Model.Hadiths)
-{
-	@Html.Partial("HadithView", hadithVM)
+@{
+    foreach (HadithViewModel hadithVM in Model.Hadiths)
+    {
+        Html.RenderPartial("HadithView", hadithVM);
+    }
 }
+@{ Html.RenderPartial("Adverts"); }
