--- a/QuranX.Web/Views/HadithCollections/HadithCollections.cshtml
+++ b/QuranX.Web/Views/HadithCollections/HadithCollections.cshtml
@@ -2,20 +2,21 @@
 @model IEnumerable<HadithCollection>
 
 @{
-	ViewBag.Title = "Hadith collections";
+    ViewBag.Title = "Hadith collections";
 }
 
 <h1>@ViewBag.Title</h1>
 <ol class="hadithcollection__collection-list striped">
-	@foreach (HadithCollection collection in Model)
-	{
-		<li>
-			<a href="/Hadith/@collection.Code/@collection.PrimaryReferenceCode/">
-				<div class="row">
-					<span class="col-xs-4 col-sm-3 col-md-2">@collection.Code</span>
-					<span class="col-xs-8 col-sm-9 col-md-10">@collection.Name</span>
-				</div>
-			</a>
-		</li>
-	}
+    @foreach (HadithCollection collection in Model)
+    {
+        <li>
+            <a href="/Hadith/@collection.Code/@collection.PrimaryReferenceCode/">
+                <div class="row">
+                    <span class="col-xs-4 col-sm-3 col-md-2">@collection.Code</span>
+                    <span class="col-xs-8 col-sm-9 col-md-10">@collection.Name</span>
+                </div>
+            </a>
+        </li>
+    }
 </ol>
+@{ Html.RenderPartial("Adverts"); }
