--- a/QuranX.Web/Views/VerseHadiths/VerseHadiths.cshtml
+++ b/QuranX.Web/Views/VerseHadiths/VerseHadiths.cshtml
@@ -2,21 +2,24 @@
 @using QuranX.Web.Views.Shared
 
 @{
-	ViewBag.Title = $"Hadiths for {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
-	string hadithsTitle = Model.Hadiths.Count() == 1 ? "hadith" : "hadiths";
+    ViewBag.Title = $"Hadiths for {Model.Chapter.ChapterNumber}.{Model.VerseNumber}";
+    string hadithsTitle = Model.Hadiths.Count() == 1 ? "hadith" : "hadiths";
 }
 <h1>The Qur'an</h1>
 <h2>
-	Hadiths for <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
-		@Model.Chapter.ChapterNumber.@Model.VerseNumber
-	</a>
+    Hadiths for <a href="/@Model.Chapter.ChapterNumber.@Model.VerseNumber">
+        @Model.Chapter.ChapterNumber.@Model.VerseNumber
+    </a>
 </h2>
 <h3>@Model.Chapter.EnglishName - @Model.Chapter.ArabicName</h3>
-@if (Model.Hadiths.Count() != 1)
-{
-	<h4>@Model.Hadiths.Count() @hadithsTitle</h4>
+@{
+    if (Model.Hadiths.Count() != 1)
+    {
+        <h4>@Model.Hadiths.Count() @hadithsTitle</h4>
+    }
+    foreach (HadithViewModel hadithVM in Model.Hadiths)
+    {
+        Html.RenderPartial("HadithView", hadithVM);
+    }
 }
-@foreach (HadithViewModel hadithVM in Model.Hadiths)
-{
-	@Html.Partial("HadithView", hadithVM)
-}
+@{ Html.RenderPartial("Adverts"); }
