--- a/src/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/src/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -30,11 +30,11 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <div id="zakat-container" href="https://www.patreon.com/QuranX">
+    <div id="donate-container" href="https://www.patreon.com/QuranX">
         <a href="https://www.patreon.com/QuranX" class="quranx navbar-brand">
             <img class="subhan-Allah" src="~/Content/Images/SubhanAllah.png" />
             <div class="donate-text">
-                Zakat
+                Donate
             </div>
         </a>
     </div>
