--- a/src/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/src/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -9,12 +9,14 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/site")
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-42308840-1"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-680HEFB03Z"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-42308840-1');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+ 
+      gtag('config', 'G-680HEFB03Z');
     </script>
     <meta property="og:image" content="https://QuranX.com/Content/Images/QuranXSocialIcon.png" />
     <meta property="og:title" content="QuranX.com The most complete Quran / Hadith / Tafsir collection available!" />
