--- a/src/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/src/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -28,7 +28,7 @@
                     </a>
                 </div>
                 <div class="col-xs-8 col-sm-7 col-md-8 col-lg-10 verse-analysis__word-image">
-                    <img src="~/Content/Images/ArabicWords/@(Html.GetHexValues(word.Buckwalter)).png" alt="@word.Buckwalter" />
+                    <img src="~/Images/ArabicWords/@(Html.GetHexValues(word.Buckwalter)).png" alt="@word.Buckwalter" />
                 </div>
                 <div class="col-xs-12 col-sm-5 col-md-4 col-lg-2 verse-analysis__word-text">
                     <div class="verse-analysis__word-text-buckwalter">
