jquery is now working

--- a/src/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/src/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,15 @@
  
       gtag('config', 'G-680HEFB03Z');
     </script>
+    <script src="/Scripts/jquery-3.3.1.js"></script>
+    <script src="/Scripts/jquery.validate.js"></script>
+    <script src="/Scripts/jquery.highlight.js"></script>
+    <script src="/Scripts/bootstrap.js"></script>
+    <script src="/Scripts/modernizr-2.8.3.js"></script>
+    <script src="/Scripts/quranx.autohighlight.js"></script>
+    <script src="/Scripts/quranx.hash-url-fixer.js"></script>
+    <script src="/Scripts/quranx.verse-counts.js"></script>
+    <script src="/Scripts/quranx.verse-translations.js"></script>
     <meta property="og:image" content="https://QuranX.com/Images/QuranXSocialIcon.png" />
     <meta property="og:title" content="QuranX.com The most complete Quran / Hadith / Tafsir collection available!" />
     <meta property="og:url" content="https://QuranX.com@(currentUrl)" />
@@ -37,7 +46,7 @@
 <body>
     <div id="donate-container" href="https://www.patreon.com/QuranX">
         <a href="https://www.patreon.com/QuranX" class="quranx navbar-brand">
-            <img class="subhan-Allah" src="~/Images/SubhanAllah.png" />
+            <img class="subhan-Allah" src="/Images/SubhanAllah.png" />
             <div class="donate-text">
                 Donate
             </div>
@@ -65,15 +74,5 @@
     <div class="container-fluid body-content pt">
         @RenderBody()
     </div>
-
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
-    <script src="~/Scripts/jquery.validate.js"></script>
-    <script src="~/Scripts/jquery.highlight.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
-    <script src="~/Scripts/modernizr-2.8.3.js"></script>
-    <script src="~/Scripts/quranx.autohighlight.js"></script>
-    <script src="~/Scripts/quranx.hash-url-fixer.js"></script>
-    <script src="~/Scripts/quranx.verse-counts.js"></script>
-    <script src="~/Scripts/quranx.verse-translations.js"></script>
 </body>
 </html>
