Re-style arabic text

--- a/src/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
+++ b/src/QuranX.Web/Views/RootAnalysis/RootAnalysis.cshtml
@@ -6,7 +6,7 @@
 	ViewBag.Title = $"Analysis for root {Model.ArabicRoot} ({Model.RootLetterNames})";
 }
 <h1>The Qur'an</h1>
-<h2>Verses for root <span dir="rtl">@Model.ArabicRoot</span> (@Model.RootLetterNames)</h2>
+<h2>Verses for root <span class="arabic">@Model.ArabicRoot</span> (@Model.RootLetterNames)</h2>
 @if (Model.Dictionaries.Any())
 {
 	<div class="root-analysis__dictionaries">
