--- a/src/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/src/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -11,7 +11,7 @@
     </a>
 </h2>
 <h3>
-    @Model.Chapter.EnglishName - <span dir="rtl">@Model.Chapter.ArabicName</span>
+    @Model.Chapter.EnglishName - <span class="arabic">@Model.Chapter.ArabicName</span>
 </h3>
 @{ await Html.RenderPartialAsync("SelectChapterAndVerse", Model.SelectChapterAndVerse); }
 <div class="row">
