--- a/src/QuranX.Web/wwwroot/Site.css
+++ b/src/QuranX.Web/wwwroot/Site.css
@@ -132,14 +132,14 @@
 
 
 .arabic {
-    font-size: 2.5rem;
+    font-size: 1.5em;
     vertical-align: bottom;
     direction: rtl;
     padding: 0;
     margin: 0;
     margin-right: 0.5rem;
     font-weight: 100;
-    color: hsla(0, 0%, 0%, 0.8);
+    vertical-align: sub;
 }
 
 .verse__translation.arabic-container > dd {
